[metadata]
name = hissw
description = Seamlessly integrate SSWIDL code into your Python workflow
long_description = file: README.md
long_description_content_type = text/markdown
author = Will Barnes
author_email = will.t.barnes@gmail.com
url = https://github.com/wtbarnes/hissw
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
keywords = 
    solar 
    sun 
    ssw 
    solar-physics
    idl 
    sswidl 
    solarsoft

project_urls = 
    Documentation = https://wtbarnes.github.io/hissw/
    Source = https://github.com/wtbarnes/hissw/

[options]
zip_safe = False
packages = find:
setup_requires = 
    setuptools_scm
include_package_data = True
python_requires = >=3.6
install_requires = 
    jinja2
    scipy

[options.extras_require]
astropy = 
    astropy
test = 
    pytest
    astropy
docs =
    mkdocs
    mkdocs-material

[options.package_data]
hissw = templates/*